georeferencing seems working, #1

--- a/environment.yml
+++ b/environment.yml
@@ -8,3 +8,8 @@ dependencies:
         - numpy
         - matplotlib
         - scipy
+        - geopandas
+        - geopy
+        - pip
+        - pip:
+                - geojsoncontour
