--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -2,7 +2,7 @@
 # https://github.com/pypa/gh-action-pypi-publish
 # https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
 
-name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
+name: Publish to PyPI
 on:
   workflow_dispatch:
   push:
@@ -11,18 +11,21 @@ on:
 
 jobs:
   build-n-publish:
-    name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
+    name: Publish to PyPI
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v3      
+
+    - name: Set up Python
+      uses: actions/setup-python@v3
+
     - name: Install pypa/build
       run: >-
         python -m
         pip install
         build
         --user
+
     - name: Build a binary wheel and a source tarball
       run: >-
         python -m
@@ -31,11 +34,13 @@ jobs:
         --wheel
         --outdir dist/
         .
-#     - name: Publish distribution 📦 to Test PyPI
-#       uses: pypa/gh-action-pypi-publish@release/v1
-#       with:
-#         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-#         repository_url: https://test.pypi.org/legacy/
+
+    - name: Publish to Test PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository_url: https://test.pypi.org/legacy/
+
 #     - name: Publish distribution 📦 to PyPI
 #       uses: pypa/gh-action-pypi-publish@release/v1
 #       with:
