--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -40,6 +40,7 @@ jobs:
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
+      continue-on-error: true
 
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
